--- a/res/layout/settle.xml
+++ b/res/layout/settle.xml
@@ -1,37 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/backkforsettiggg"
+    android:layout_height="match_parent"
+    android:background="@drawable/backkforsettig"
     android:orientation="vertical" >
     
-  <TableLayout android:layout_width="fill_parent" android:layout_height="fill_parent" 
+  <TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content" 
       android:id="@+id/tablelayout1">
         <TableRow >
             <TextView android:text="Names" android:layout_width="fill_parent"
                 android:paddingLeft="7dp"
+                android:textSize="20sp"
                 android:layout_height="fill_parent" android:layout_weight="1"/>
 
             <TextView
+                android:layout_width="fill_parent"
+                android:textSize="20sp"
+                android:layout_height="fill_parent"
+                android:layout_weight="1"
+                android:text="Balance" />
+
+        </TableRow>
+       </TableLayout>
+           <TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content" 
+          android:id="@+id/tablelayout2">
+           <TableRow >
+                <TextView android:id="@+id/tvNames"  android:text="Names" android:layout_width="fill_parent"
+                android:paddingLeft="7dp"
+                android:layout_height="fill_parent" android:layout_weight="1"/>
+
+            <TextView
+                android:id="@+id/tvBalance"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
                 android:text="Balance" />
 
         </TableRow>
-      
-  </TableLayout>
-  <TextView android:text="get info from db" android:id="@+id/tvSQLinfoSettleUp" android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:paddingLeft="8dp"/>
+       </TableLayout>
+        
 
-  <Button
-      android:id="@+id/bSettle"
+        <Button
+            android:id="@+id/bSettle"
       android:layout_width="100dp"
       android:layout_height="50dp"
       android:layout_gravity="center"
       android:layout_marginTop="70dp"
       android:background="@drawable/bckb"
       android:text="Settle Up" />
+      
+  
+  
 
 </LinearLayout>
